fixed all gaps

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ body {
   height: 100%;
   top: 0;
   left: 0;
+  bottom: 0;
   padding: 72px 0 40px;
   background-color: #fff;
   z-index: 10;
@@ -293,11 +294,7 @@ body {
 }
 
 .stand-out-item {
-  width: 100%;
-}
-
-.stand-out-item {
-  margin-bottom: 72px;
+  margin: 0 auto 72px;
 }
 .stand-out-item:last-child {
   margin-bottom: 0;
@@ -357,7 +354,7 @@ body {
 }
 
 .our-team-item {
-  margin-bottom: 72px;
+  margin: 0 auto 72px;
   display: flex;
   flex-direction: column;
   cursor: pointer;
@@ -1001,26 +998,23 @@ body {
 
   .stand-out-list {
     display: flex;
-    gap: 24px;
+    gap: 72px 24px;
     flex-wrap: wrap;
     justify-content: center;
   }
 
   .stand-out-item {
     flex-basis: calc((100% - 24px) / 2);
-    max-width: 356px;
-    margin-bottom: 0;
+    margin: 0;
   }
-  .stand-out-item:not(:nth-child(-n + 2)) {
-    margin-top: 48px;
-  }
+
   .stand-out-title {
     text-align: left;
   }
 
   .our-team-list {
     display: flex;
-    gap: 24px;
+    gap: 64px 24px;
     flex-wrap: wrap;
     justify-content: center;
   }
@@ -1028,18 +1022,14 @@ body {
   .our-team-item {
     flex-basis: calc((100% - 24px) / 2);
     max-width: 264px;
-    margin-bottom: 0;
-  }
-
-  .our-team-item:not(:nth-child(-n + 2)) {
-    margin-top: 40px;
+    margin: 0;
   }
 
   .portfolio-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
     justify-content: center;
   }
 
@@ -1049,9 +1039,9 @@ body {
     margin-bottom: 0;
   }
 
-  .portfolio-item:not(:nth-child(-n + 2)) {
+  /* .portfolio-item:not(:nth-child(-n + 2)) {
     margin-top: 48px;
-  }
+  } */
 
   .portfolio-item-card {
     height: 300px;
@@ -1064,6 +1054,7 @@ body {
     display: flex;
     align-items: baseline;
     flex-wrap: wrap;
+    width: 584px;
   }
 
   .footer-block {
@@ -1180,13 +1171,14 @@ body {
   }
 
   .our-team-item {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
   }
-  .our-team-item:not(:nth-child(-n + 2)) {
-    margin-top: 0;
-  }
+ 
   .portfolio {
     padding: 120px 0;
+  }
+  .portfolio-list {
+    gap: 48px 24px;
   }
   .portfolio-item {
     flex-basis: calc((100% - 48px) / 3);
@@ -1194,12 +1186,12 @@ body {
     margin-bottom: 0;
   }
 
-  .portfolio-item:nth-child(3) {
+  /* .portfolio-item:nth-child(3) {
     margin-top: 0;
   }
   .portfolio-item:not(:nth-child(-n + 3)) {
     margin-top: 24px;
-  }
+  } */
 
   .footer-container {
     flex-wrap: nowrap;
